# FastSpellChecker

./: .bumpversion.cfg  .clang-format  CMakeLists.txt  MANIFEST.in  Pipfile  README.md  build.sh  pyproject.toml  setup.py
.github/workflows/: main.yaml
FastSpellChecker/: Dictionary.py  FastSpellChecker.cpp  __init__.py
libdictionary/: CMakeLists.txt
libdictionary/src/: dictionary.cpp
libfsc/: CMakeLists.txt
libfsc/include/: fsc.hpp
libfsc/src/: fsc.cpp
pylibdictionary/: dictionary.cpp
tests/: CMakeLists.txt  test_main.py  tests.cpp  tests_data.cpp
